# newdawn-repos

./: .gitignore  README.md
study03/week01/: .env.sample  .gitignore  01_langchain_model.ipynb  02_langchain_tools.ipynb  README.md  chatapi_sample.ipynb  main.py  pyproject.toml
study03/week02/: .env.sample  02_mcp_server_remote.py  03_mcp_server_client.ipynb  README.md  claude_desktop_config.json  claude_desktop_config.json.sample  main.py  mcp_server_local.py  pyproject.toml
study03/week02/.cursor/rules/: python.mdc
study03/week03/: .gitignore  01_rag_with_lcel.ipynb  02_rag_with_langgraph.ipynb  README.md  main.py  pyproject.toml
travel-iter/: .env.sample  .gitignore  README.md  main.py  pyproject.toml  travel_agent.py
travel-iter/agents/: itinerary.py
