[project]
name = "week02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-anthropic>=0.3.12",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-teddynote>=0.3.45",
    "langgraph>=0.4.3",
    "mcp[cli]==1.6.0",
    "pytz>=2025.2",
]
